Replaced cases chart
Chart graph has been updated to match better the use case of the system.

- Scripts have been rearranged

--- a/css/main.css
+++ b/css/main.css
@@ -7478,6 +7478,7 @@ button.dropdown-item.is-active {
   max-height: calc(100vh - 40px);
   overflow: hidden;
   -ms-overflow-y: visible;
+  overflow-y: visible;
 }
 
 .modal-card-head,
@@ -13932,9 +13933,9 @@ table.table td.is-progress-col {
   vertical-align: middle;
 }
 
-.b-table {
-  /* This stylizes buefy's pagination */
-}
+/*.b-table {
+  /* This stylizes buefy's pagination 
+}*/
 
 .b-table .table {
   border: 0;
